# pdf-ocr

./: .gitignore  README.md  pyproject.toml  requirements.txt
pdf_ocr/: __init__.py  __main__.py  analyzer.py  cli.py  processor.py
